<resources>
    <string name="app_name">Tu Armería</string>
    <string name="lbl_password">Guarda una contraseña</string>
    <string name="lbl_insert_password">Introduce tu contraseña</string>
    <string name="lbl2_insert_password">Introduce tu contraseña de nuevo</string>
    <string name="lbl3_insert_password">Introduce tu contraseña actual</string>
    <string name="lbl4_insert_password">Introduce tu nueva contraseña</string>
    <string name="lbl5_insert_password">Repite la nueva contraseña</string>
    <string name="password_save">Contraseña guardada, recuerda registrar una pregunta de seguridad
        para poder resetear la contraseña en caso de olvido</string>
    <string name="password_fail">Contraseña incorrecta</string>
    <string name="password_save_fail">Contraseña invalida</string>
    <string name="password_short_fail">Contraseña demasiado corta</string>
    <string name="password_equal_fail">Las contraseñas no coinciden</string>
    <string name="title_activity_fragment_main">Munición</string>
    <string name="action_settings">Configuración</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="login">Login</string>
    <string name="login_ok">Login correcto</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="section_guias_title">Guías</string>
    <string name="section_compras_title">Compras</string>
    <string name="section_licencias_title">Licencias</string>
    <string name="section_competiciones_title">Tiradas</string>
    <string name="title_nueva_guia">Nueva guía de arma</string>
    <string name="menu_form_save">Guardar</string>
    <string name="labelInfoGuia">Información de la nueva guia</string>
    <string name="apodo">Apodo</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo  </string>
    <string name="tipoArma">Tipo</string>
    <string name="calibre">Calibre</string>
    <string name="calibre2">Calibre2</string>
    <string name="numGuia">Numero de guia</string>
    <string name="num_arma">Numero de serie del arma</string>
    <string name="cupo">Cupo de la guia</string>
    <string name="cupo_anual">Cupo Anual</string>
    <string name="cartuchos_gastados">Cartuchos gastados</string>
    <string name="error_before_save">Este campo es obligatorio</string>
    <string name="error_mensaje_cabecera">Antes de guardar debes rellenar los campos obligatorios</string>
    <string name="label_apodo">Apodo</string>
    <string name="label_cupo">Cupo</string>
    <string name="label_gastado">Gastado</string>
    <string name="form_lbl_tipo_arma">Tipo de arma</string>
    <string name="lbl_tipo_licencia">Tipo de licencia</string>
    <string name="lbl_tipo_permiso_conducir">Tipo de permiso de conducción</string>
    <string name="lbl_num_licencia">Num licencia</string>
    <string name="lbl_edad">Edad</string>
    <string name="lbl_num_dni">Num dni sin letra</string>
    <string name="lbl_num_abonado">Num abonado</string>
    <string name="lbl_num_poliza">Póliza seguro</string>
    <string name="lbl_expedicion_licencia">Expedicion</string>
    <string name="lbl_caducidad_licencia">Caducidad</string>
    <string name="item_apodo_guia">Apodo</string>
    <string name="check_segundo_calibre">Tiene segundo calibre</string>
    <string name="item_num_guia">12345</string>
    <string name="label_num_guia">Num guia</string>
    <string name="title_nueva_compra">Nueva compra</string>
    <string name="labelInfoCompra">Información de la nueva compra</string>
    <string name="precio">Precio</string>
    <string name="cartuchos_comprados">Numero de cartuchos comprados</string>
    <string name="municion_propia">Municion propia</string>
    <string name="unidades">Unidades</string>
    <string name="fecha">Fecha</string>
    <string name="tipo_municion">Tipo de munición</string>
    <string name="peso_municion">Peso (grains)</string>
    <string name="tienda">Ubicación de la tienda</string>
    <string name="valoracion">Valoracion</string>
    <string name="title_nueva_licencia">Nueva Licencia</string>
    <string name="tipo_licencia">Tipo de licencia</string>
    <string name="tipo_permiso_conducir">Carnet de conducir</string>
    <string name="lbl_ccaa">Com. Autónoma</string>
    <string name="lbl_categoria">Categoria</string>
    <string name="fecha_expedicion">Fecha de expedición</string>
    <string name="fecha_caducidad">Fecha de caducidad</string>
    <string name="libro_coleccionista">Libro de coleccionista</string>
    <string name="lbl_escala">Escala</string>
    <string name="msg_err_num_licencia">Introduce el numero de licencia</string>
    <string name="msg_err_fecha_exp">Introduce la fecha de expedición</string>
    <string name="msg_err_fecha_cad">Introduce la fecha de caducidad</string>
    <string name="msg_err_poliza_seg">Introduce el número de la poliza del seguro</string>
    <string name="msg_err_edad">Introduce la edad</string>
    <string name="title_nueva_tirada">Nueva Tirada</string>
    <string name="lbl_categoria_tirada">Categoría</string>
    <string name="lbl_modalidad_tirada">Modalidad de puntuación</string>
    <string name="lbl_descripcion_tirada">Descripción</string>
    <string name="lbl_puntuacion_tirada">Puntuación [0-600]</string>
    <string name="msg_countdown_ultima_tirada">Para renovar tu licencia necesitas una tirada antes de éstos días:</string>
    <string name="form_tirada_aviso_puntuacion">Puntuación por encima del límite (600 pts)</string>
    <string name="hint_score_range_precision">Rango válido: 0-600 puntos</string>
    <string name="hint_score_range_ipsc">Rango válido: 0-100%</string>
    <string name="lbl_caducidad_tirada">Tiempo máximo permitido hasta la próxima tirada %s días</string>
    <string name="settings_title_change_password">Gestión de contraseñas</string>
    <string name="password_equal_actual">Las contraseña no es correcta, vuelve a escribirla</string>
    <string name="settings_password_save">Contraseña modificada correctamente</string>
    <string name="settings_password_unlogin">Primero debes registrar tu contraseña</string>
    <string name="settings_password_empty">Debes rellenar la nueva contraseña</string>
    <string name="password_update">Contraseña actualizada</string>
    <string name="pref_password_old">Modificar contraseña</string>
    <string name="pref_password_new">Escribe tu nueva contraseña</string>
    <string name="pref_boton">Guardar contraseña</string>
    <string name="aumento_cupo">Aumento de cupo</string>
    <string name="menu_cab_title">Opciones</string>
    <string name="modify">Modifciar</string>
    <string name="delete">Eliminar</string>
    <string name="guardadoBBDD">Base de datos actualizada</string>
    <string name="dialog_licencia_title">Selecciona una licencia</string>
    <string name="select_licencia">Selecciona una licencia</string>
    <string name="dialog_guia_title">Selecciona una guía</string>
    <string name="delete_license_fail">Primero deben borrarse las guias asociadas a esta licencia</string>
    <string name="dialog_guia_fail">Debe introducir una licencia de armas primero</string>
    <string name="dialog_guia_licencia_tipoE">Para la licencia de tipo E el límite de guias es de 12</string>
    <string name="dialog_guia_licencia_tipoE_escopeta">Para la licencia de tipo E con escopeta el límite de guias es de 6</string>
    <string name="dialog_guia_licencia_tipoE_rifle">Para la licencia de tipo E con rifle el límite de guias es de 6</string>
    <string name="dialog_guia_licencia_federativa_categoria1">Para las licencias federativas de 1ª Categoría el máximo de guias permitidas es de 10</string>
    <string name="dialog_guia_licencia_federativa_categoria2">Para las licencias federativas de 2ª Categoría el máximo de guias permitidas es de 6</string>
    <string name="dialog_guia_licencia_federativa_categoria3">Para las licencias federativas de 3ª Categoría el máximo de guias permitidas es de 1</string>
    <string name="dialog_guia_licencia_federativa">Primero debe seleccionar una licencia Federativa con su respectiva Categoría</string>
    <string name="dialog_licencia_no_permiso">Para guardar la Licencia es necesario permiso de lectura/escritura en el Calendario del dispositivo</string>
    <string name="lbl_tipo_escala">Escala</string>
    <string name="tipo_escala">Selecciona la escala del agente</string>
    <string name="pref_list_notification">Lista de notificaciones</string>
    <string name="admob_id" translatable="false">ca-app-pub-8582752139018186~4798397758</string>
    <string name="banner_login_id" translatable="false">ca-app-pub-8582752139018186/6275130957</string>
    <string name="banner_main_id" translatable="false">ca-app-pub-8582752139018186/4700666152</string>
    <string name="banner_formularios_id" translatable="false">ca-app-pub-8582752139018186/6177399356</string>
    <string name="banner_login_intersticial_id" translatable="false">ca-app-pub-8582752139018186/3022096555</string>
    <string name="guia_empty_list">Crea una LICENCIA de armas antes de añadir una GUIA</string>
    <string name="compra_empty_list">Crea una GUIA a la que asociar la COMPRA</string>
    <string name="licencia_empty_list">¿A qué esperas? Crea tu primera LICENCIA</string>
    <string name="tiradas_empty_list">¡¡Adelante!! Agrega una COMPETICIÓN</string>
    <string name="auth_usuario_existente">Usuario ya existente</string>
    <string name="auth_usuario_logado">El usuario ya esta logado</string>
    <string name="login_text_info">Introduce 6 dígitos como mínimo</string>
    <string name="description_login_button">Botón de login</string>
    <string name="settings_title_show_tutorial">Mostrar tutorial</string>
    <string name="btn_tutorial_entrar">Entrar</string>
    <string name="settings_title_security_question">Pregunta de seguridad</string>
    <string name="settings_type_security_question">Selecciona una pregunta de seguridad</string>
    <string name="settings_question_save">Pregunta guardada</string>
    <string name="settings_answer_empty">Debes responder a la pregunta</string>
    <string name="settings_answer_fail">Respuesta demasiado corta</string>
    <string name="settings_answer_equal_fail">Las respuestas no coinciden</string>
    <string name="lbl_question_type">Pregunta de Seguridad</string>
    <string name="lbl_insert_answer">Introduce tu respuesta</string>
    <string name="lbl_confirm_answer">Repite tu respuesta</string>
    <string name="answer_save">Respuesta guardada</string>
    <string name="settings_title_reset_password">Reiniciar contraseña</string>
    <string name="settings_empty_question_security">Primero debe responder a una pregunta de seguridad</string>
    <string name="settings_reset_password">Se ha reseteado su password</string>
    <string name="settings_reset_answer_fail">La respuesta no es correcta</string>
    <string name="year">Año</string>
    <string name="date">Fecha</string>
    <string name="app_public_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvDvqFcMgylgnwiMHai3DqTiCEobhOp5Sx6i0TqiXpcOeB/H0AjPL7+6uqFRjrKmrxrNh0H6dw6oHPcuvO4M0WjIRfTyMOxnj/77APaVKYFJfQkebS19NxeldRiK67zVLrNVx5FWTpg4iwzOot6las7QxzAVG+CCy0KULP4q3khwZ/d0UKgJSvZwDpY6c9071tL6Vo1UTqbfAQf8lm1pinGPltZVJIQzvrCz1GAngEHU+eo4JHAUomVHJNTt7HlTABmhGUpOEG0MtMRSmlIq9yjoYvvO8PXcsFqF12z9LmMBH57Sw7mP3+9aeR6hMUS8N/Rqi6vw6KQivzeTqr0MyxwIDAQAB</string>
    <string name="settings_title_remove_ads">Eliminar publicidad</string>
    <string name="purchase_cancel">Compra cancelada</string>
    <string name="purchase_done">Ya has eliminado la publicidad</string>
    <string name="purchase_not_support">Tu dispositivo no soporta compras integradas</string>
    <string name="tabla_tiradas">Puntuaciones de ascenso</string>
    <string name="tabla_tiradas_description">Ver tabla de puntuaciones para categorías</string>
</resources>