<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="al.ahgitdevelopment.municion.FragmentMainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/item_selected_group_menu"
        android:visible="false">
        <item
            android:id="@+id/item_menu_modify"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/modify"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/item_menu_delete"
            android:icon="@android:drawable/ic_menu_delete"
            android:title="@string/delete"
            app:showAsAction="ifRoom"/>
    </group>
</menu>
