<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!--Mensaje de error formulario-->
    <EditTextPreference
        android:key="kText" />

    <EditTextPreference
        android:key="kPasswordOld"
        android:capitalize="words"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_password_old" />

    <EditTextPreference
        android:key="kPasswordNew"
        android:capitalize="words"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_password_new" />

    <Preference
        android:key="kButton"
        android:title="@string/pref_boton" />

</PreferenceScreen>
