<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--TIPO LICENCIA-->
        <TextView
            android:id="@+id/form_lbl_tipo_licencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tipo_licencia"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/form_tipo_licencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipo_licencias"
            android:hint="@string/tipo_licencia"
            android:inputType="text"
            android:spinnerMode="dropdown"/>

        <!--NUMERO DE LICENCIA-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_num_licencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_num_licencia"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <!--NUMERO DE ABONADO-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/form_num_abonado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_num_abonado"
                android:visibility="gone"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <!--FECHA EXPEDICION-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_form_fecha_expedicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/form_fecha_expedicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/fecha_expedicion"
                android:inputType="none"/>
        </android.support.design.widget.TextInputLayout>

        <!--FECHA CADUCIDAD-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_form_fecha_caducidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false">

            <EditText
                android:id="@+id/form_fecha_caducidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/fecha_caducidad"
                android:inputType="none"/>
        </android.support.design.widget.TextInputLayout>

        <!--Comunidad Autonoma-->
        <TextView
            android:id="@+id/form_lbl_ccaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ccaa"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/form_ccaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/ccaa"
            android:hint="@string/ccaa"
            android:inputType="text"
            android:visibility="gone"
            android:spinnerMode="dropdown"/>

    </LinearLayout>
</ScrollView>