<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/basic_toolbar"/>

    <ScrollView
        android:id="@+id/form_scrollview_compra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@id/appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <!--Mensaje de error formulario-->
            <TextView
                android:id="@+id/form_mensaje_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:visibility="gone"/>

            <!--CALIBRE 1-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_calibre1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_calibre1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/calibre"
                    android:imeOptions="actionNext"
                    android:inputType="none|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!--CHECK BOX CALIBRE 2-->
            <CheckBox
                android:id="@+id/form_check_segundo_calibre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:enabled="false"
                android:text="@string/check_segundo_calibre"/>
            <!--CALIBRE 2-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_calibre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_calibre2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/calibre2"
                    android:imeOptions="actionNext"
                    android:inputType="none|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!--UNIDADES-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_unidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_unidades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/unidades"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="@integer/max_unidades_compra_length"/>
            </android.support.design.widget.TextInputLayout>

            <!--PRECIO-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="@integer/max_unidades_precio_length"/>
            </android.support.design.widget.TextInputLayout>

            <!--FECHA-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_form_fecha_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="callDatePickerFragment">

                <EditText
                    android:id="@+id/form_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/fecha"
                    android:imeOptions="actionNext"
                    android:inputType="none"/>
            </android.support.design.widget.TextInputLayout>

            <!--TIPO MUNICION-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_tipo_municion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_tipo_municion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tipo_municion"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!--PESO MUNICION-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_peso_municion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_peso_municion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/peso_municion"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="@integer/max_peso_municion_compra"/>
            </android.support.design.widget.TextInputLayout>

            <!--MARCA MUNICION-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_marca_municion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_marca_municion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/marca"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!--TIENDA MUNICION-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_tienda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/form_tienda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tienda"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapSentences"/>
            </android.support.design.widget.TextInputLayout>

            <!--VALORACION-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:text="@string/valoracion"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <RatingBar
                android:id="@+id/form_ratingBar_valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_formularios_id">
    </com.google.android.gms.ads.AdView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_form_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_margin="12dp"
        android:clickable="true"
        android:onClick="fabSaveOnClick"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_save"/>

</RelativeLayout>